# IngeniumUAHub-Dashboard

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: dashboard_production  dashboard_production.yml  dpu_production.yml  linting.yml
dashboard/: Dockerfile  pyproject.toml
dashboard/app/: main.py  settings.py
dashboard/app/.streamlit/: config.toml
dashboard/app/apiwrappers/azure/: container_client.py
dashboard/app/apiwrappers/umami/: umami_client.py
dashboard/app/modules/authentication/: authentication.py
dashboard/app/modules/core/: core_api.py  core_parsing.py
dashboard/app/modules/data_manipulation/denormalisation/: denormalise_ingestion.py
dashboard/app/modules/data_manipulation/query_repository/: checkout_queries.py  checkout_tracker_queries.py  cloud_blob_queries.py  transaction_queries.py
dashboard/app/modules/duckdb/: duckdb_connection.py  duckdb_tables.py
dashboard/app/modules/hub/: core_client.py  core_parsing.py  data_client.py  hub_client.py  link_client.py  umami_client.py
dashboard/app/modules/keycloak/: keycloak_jwt.py
dashboard/app/page/: colors.py  duck_ingestion_page.py  main_page.py  ordertracking_analytics_page.py  transaction_analytics_page.py  user_analytics_page.py
dashboard/app/page/cached_resources/: azure_connection.py  clients.py  duck.py  duckdb_connection.py  health_checks.py  keycloak_jwt.py
dashboard/app/page/fragments/: core_heath_check.py
dashboard/app/page/lib/: authentication.py  core_heath_check.py  umami_health_check.py
dashboard/app/page/routes/: cloud_analytics_page.py  data_sync_status_page.py  dblog_page.py  duck_ingestion_page.py  lidkaarten_old_page.py  main_page.py  transaction_analytics_page.py  user_analytics_page.py
dashboard/app/page/routes/item_pages/: item_detail_page.py  items_overview_page.py
dashboard/app/page/routes/popupz/: popupz_products_report.py
dashboard/app/systems/ingestion/: cloud_to_duckdb.py  core_to_duckdb.py  csv_files.py
data/: DockerfileData  pyproject.toml
data/app/: main.py
data/app/api/: base_routers.py
data/app/apiwrappers/azure/: container_client.py
data_analytics/: Dockerfile  pyproject.toml
data_analytics/app/: main.py  settings.py
data_analytics/app/modules/authentication/: authentication.py
data_analytics/app/page/: main_page.py  user_analytics_page.py
dpu/: Dockerfile  pyproject.toml
dpu/app/: main.py  settings.py
dpu/app/api/: base_routers.py  cloud_router.py  duck_router.py
dpu/app/apiwrappers/hub/: core_client.py  hub_client.py
dpu/app/apiwrappers/umami/: umami_client.py
dpu/app/modules/authentication/: authentication_dep.py  keycloak_jwt.py  service_authentication_dep.py  user_authentication_dep.py
dpu/app/modules/data_manipulation/query_repository/: checkout_tracker_queries.py  transaction_queries.py
dpu/app/modules/duckdb/: duck_general_query_repository.py  duckdb_dep.py
dpu/app/modules/exception/: hubexception.py
dpu/app/systems/ingestion/: cloud_to_duckdb.py  core_ingestion.py  ingestion_interface.py
dpu/app/systems/ingestion/dpu_storage/: azure_dpu.py  ingest_egress_lifespan.py
